@@ -24,14 +24,16 @@ New in Isabelle??? (FIXME)
   combines rewriting and classical reasoning (and whatever other tools)
   similarly to auto_tac, but is aimed to solve the given subgoal totally.
 
-* added option_map_eq_Some to simpset(), option_map_eq_Some RS iffD1 to claset()
+* added option_map_eq_Some to simpset() and claset()
+
 * New directory HOL/UNITY: Chandy and Misra's UNITY formalism
 
 * split_all_tac is now much faster and fails if there is nothing to split.
   Existing (fragile) proofs may require adaption because the order and the
   names of the automatically generated variables have changed.
   split_all_tac has moved within claset() from usafe wrappers to safe wrappers,
-  which means that !!-bound variables are splitted much more aggressively.
+  which means that !!-bound variables are splitted much more aggressively,
+  and safe_tac and clarify_tac now split such variables.
   If this splitting is not appropriate, use delSWrapper "split_all_tac".
 
 * added disj_not1 = "(~P | Q) = (P --> Q)" to the default simpset
